<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity_historial">



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_historial"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/tv_historial"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_nombre2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:gravity="center"
                android:text="@string/tv_nombre"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_telefono2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_telefono"
                android:textSize="18sp" />

            <ListView
                android:id="@+id/lv_historial"
                android:layout_width="match_parent"
                android:layout_height="330dp"
                android:layout_marginTop="16dp"
                android:background="#FAFAFA"
                android:divider="#CCCCCC"
                android:dividerHeight="1dp" />

            <TextView
                android:id="@+id/tv_seleccion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="#E3F2FD"
                android:padding="12dp"
                android:text="@string/tv_seleccion"
                android:textSize="16sp" />

            <Button
                android:id="@+id/btn_editarAveria"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:onClick="DetallesAveriaLista"
                android:text="@string/btn_editarAveria"
                app:icon="@drawable/averiaeditar"
                app:iconPadding="1dp"
                app:iconSize="30dp"
                app:iconTint="@null" />

            <Button
                android:id="@+id/btn_volverAtras"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="20dp"
                android:onClick="volver"
                android:text="@string/btn_volverAtras"
                app:icon="@drawable/clientevolver"
                app:iconPadding="1dp"
                app:iconSize="30dp"
                app:iconTint="@null" />

        </LinearLayout>
 
</androidx.constraintlayout.widget.ConstraintLayout>