<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AveriaActivity">

    <ScrollView
        android:layout_width="360dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_text2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center"
                android:text="@string/tv_text2"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_nombre2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_nombre"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/tv_telefono2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_telefono"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/spinnerElectro"
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_marginTop="0dp"
                android:scrollbarSize="4dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_marca"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/et_marca"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_sintoma"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/et_sintoma"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_solucion"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/et_solucion"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/etiqueta_coste"
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:gravity="center_vertical"
                    android:text="Coste:" />

                <EditText
                    android:id="@+id/et_coste"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/et_coste"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/etiqueta_importe"
                    android:layout_width="match_parent"
                    android:layout_height="29dp"
                    android:gravity="center_vertical"
                    android:text="Importe:" />

                <EditText
                    android:id="@+id/et_precio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/et_precio"
                    android:inputType="numberDecimal" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_estado"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/et_estado"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/et_fecha"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/et_fecha"
                    android:inputType="date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_volver"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="volver"
                    android:text="@string/btn_volver"
                    app:icon="@drawable/clientevolver"
                    app:iconPadding="1dp"
                    app:iconSize="30dp"
                    app:iconTint="@null" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_guardar2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="insertarAveria"
                    android:text="@string/btn_guardar2"
                    app:icon="@drawable/clienteguardar"
                    app:iconPadding="1dp"
                    app:iconSize="30dp"
                    app:iconTint="@null" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_editar2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="actualizarAveria"
                    android:text="@string/btn_editar2"
                    app:icon="@drawable/averiaeditar"
                    app:iconPadding="1dp"
                    app:iconSize="30dp"
                    app:iconTint="@null" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btn_eliminar2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:onClick="eliminarAveria"
                    android:text="@string/btn_eliminar2"
                    app:icon="@drawable/averiaeliminar"
                    app:iconPadding="1dp"
                    app:iconSize="30dp"
                    app:iconTint="@null" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>